--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
+@import url(variables.css);
 *{
-    background: red;
+    background: var(--bagraund-color-1);
 }
 h1{
-    color: blue;
+    color: var(--color-1);
 }
